istio/lab4-request-routing/virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: caj-master-file
spec:
  hosts:
    - caj-master-file
  http:
  - match:
    - headers:
        my-header:
          exact: test
    route:
    - destination:
        host: caj-master-file
        subset: v2
  - route:
    - destination:
        host: caj-master-file
        subset: v1
